--- a/views/test.ejs
+++ b/views/test.ejs
@@ -22,7 +22,7 @@
                 const name = document.getElementById('name').value;
 
                 try {
-                    const response = await fetch('/message', {
+                    const response = await fetch('/api/message', {
                         method: 'post',
                         headers: {
                             'Content-Type': 'application/json',
